exports[`changeAccounts dispatches an change to setAccount 1`] = `
Array [
  Object {
    "savedAccount": null,
    "type": "GIVE.SET_SAVED_ACCOUNT",
  },
]
`;

exports[`changeAccounts dispatches modal.hide() 1`] = `
Array [
  Object {
    "type": "MODAL.SET_VISIBILITY",
    "visible": false,
  },
]
`;

exports[`choose set's a savedAccount state 1`] = `
Object {
  "date": "2016-11-16T21:45:41.275Z",
  "id": 1,
  "name": "Test Card 1",
  "payment": Object {
    "accountNumber": "4111111111111111",
    "paymentType": "Visa",
  },
}
`;

exports[`renders layout correctly delivers props to layout 1`] = `
<ChangePayments
  currentAccount={
    Object {
      "date": "2016-11-16T21:45:41.275Z",
      "id": 1,
      "name": "Test Card 1",
      "payment": Object {
        "accountNumber": "4111111111111111",
        "paymentType": "Visa",
      },
    }
  }
  dispatch={[Function]}
  savedAccounts={
    Array [
      Object {
        "date": "2016-11-16T21:45:41.275Z",
        "id": 1,
        "name": "Test Card 1",
        "payment": Object {
          "accountNumber": "4111111111111111",
          "paymentType": "Visa",
        },
      },
      Object {
        "date": "2016-11-16T21:45:41.275Z",
        "id": 2,
        "name": "Test Card 2",
        "payment": Object {
          "accountNumber": "4111111111111111",
          "paymentType": "Visa",
        },
      },
    ]
  }>
  <Layout
    changeAccounts={[Function]}
    chooseAccount={[Function]}
    savedAccounts={
      Array [
        Object {
          "date": "2016-11-16T21:45:41.275Z",
          "id": 1,
          "name": "Test Card 1",
          "payment": Object {
            "accountNumber": "4111111111111111",
            "paymentType": "Visa",
          },
        },
        Object {
          "date": "2016-11-16T21:45:41.275Z",
          "id": 2,
          "name": "Test Card 2",
          "payment": Object {
            "accountNumber": "4111111111111111",
            "paymentType": "Visa",
          },
        },
      ]
    }
    selectedAccount={
      Object {
        "date": "2016-11-16T21:45:41.275Z",
        "id": 1,
        "name": "Test Card 1",
        "payment": Object {
          "accountNumber": "4111111111111111",
          "paymentType": "Visa",
        },
      }
    }>
    <div
      className="soft-double-top">
      <div
        className="soft-sides flush-bottom push-double-top@lap-and-up">
        <h4
          className="text-center flush-bottom">
          Change Payment Account
        </h4>
      </div>
      <div
        className="soft">
        <Component
          accountId={1}
          accountName="Test Card 1"
          onClick={[Function]}
          paymentAccount="4111111111111111"
          paymentType="Visa"
          selectedAccountId={1}>
          <div
            id={1}
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "position": "relative",
              }
            }>
            <div
              className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
              <div
                className="display-inline-block soft-half-ends one-whole">
                <h6
                  className="flush-bottom float-left text-dark-tertiary">
                  Test Card 1
                </h6>
              </div>
              <h5
                className="hard one-whole flush-bottom text-dark-tertiary">
                <span
                  className="float-right soft-half-left">
                  <AccountType
                    height="25px"
                    type="Visa"
                    width="40px">
                    <Styled(undefined)
                      height="25px"
                      width="40px">
                      <Visa
                        className="fpZPOO"
                        height="25px"
                        width="40px">
                        <styled.div
                          className="background--fill display-inline-block"
                          height="25px"
                          width="40px">
                          <div
                            className="background--fill display-inline-block kRtCDG"
                            height="25px"
                            width="40px" />
                        </styled.div>
                      </Visa>
                    </Styled(undefined)>
                  </AccountType>
                </span>
              </h5>
            </div>
            <div
              className="locked-ends locked-sides">
              <input
                checked={true}
                id="label1"
                readOnly={true}
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "padding": "50px",
                    "position": "absolute",
                    "top": 0,
                  }
                }
                type="checkbox" />
              <label
                htmlFor="label1"
                style={
                  Object {
                    "left": 0,
                    "position": "absolute",
                    "top": "50%",
                  }
                } />
            </div>
          </div>
        </Component>
        <Component
          accountId={2}
          accountName="Test Card 2"
          onClick={[Function]}
          paymentAccount="4111111111111111"
          paymentType="Visa"
          selectedAccountId={1}>
          <div
            id={2}
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "position": "relative",
              }
            }>
            <div
              className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
              <div
                className="display-inline-block soft-half-ends one-whole">
                <h6
                  className="flush-bottom float-left text-dark-tertiary">
                  Test Card 2
                </h6>
              </div>
              <h5
                className="hard one-whole flush-bottom text-dark-tertiary">
                <span
                  className="float-right soft-half-left">
                  <AccountType
                    height="25px"
                    type="Visa"
                    width="40px">
                    <Styled(undefined)
                      height="25px"
                      width="40px">
                      <Visa
                        className="fpZPOO"
                        height="25px"
                        width="40px">
                        <styled.div
                          className="background--fill display-inline-block"
                          height="25px"
                          width="40px">
                          <div
                            className="background--fill display-inline-block kRtCDG"
                            height="25px"
                            width="40px" />
                        </styled.div>
                      </Visa>
                    </Styled(undefined)>
                  </AccountType>
                </span>
              </h5>
            </div>
            <div
              className="locked-ends locked-sides">
              <input
                checked={false}
                id="label2"
                readOnly={true}
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "padding": "50px",
                    "position": "absolute",
                    "top": 0,
                  }
                }
                type="checkbox" />
              <label
                htmlFor="label2"
                style={
                  Object {
                    "left": 0,
                    "position": "absolute",
                    "top": "50%",
                  }
                } />
            </div>
          </div>
        </Component>
        <button
          className="btn one-whole push-double-top soft-sides push-bottom"
          onClick={[Function]}>
          Change Account
        </button>
        <p>
          <small>
            <em>
              You can enter a new payment account before confirming your contribution.
            </em>
          </small>
        </p>
      </div>
    </div>
  </Layout>
</ChangePayments>
`;

exports[`renders layout sets selectedAccount 1`] = `
Object {
  "date": "2016-11-16T21:45:41.275Z",
  "id": 1,
  "name": "Test Card 1",
  "payment": Object {
    "accountNumber": "4111111111111111",
    "paymentType": "Visa",
  },
}
`;
